jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: docker.io/jellyfin/jellyfin
        ports:
        - containerPort: 8096
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      # - name: jellyfin-config
      #   persistentVolumeClaim:
      #     claimName: jellyfin-config
